--- a/documentation/latex/reprotool.tex
+++ b/documentation/latex/reprotool.tex
@@ -2,13 +2,88 @@
 
 \usepackage[utf8]{inputenc}
 
-\usepackage{graphicx} % obrazky
+\usepackage{varioref} % vref command
+\usepackage[pdftex]{color,graphicx}
+%\usepackage{natbib}
+\usepackage[
+    % ==========================================================================
+    pdfauthor={TODO},
+    pdftitle={Requirements Processing Tool},
+    pdfsubject={Documentation},
+    pdfkeywords={Use-cases, Formal methods, Model Checking},
+    pdfproducer={Latex with hyperref},
+    pdfcreator={pdflatex},
+    % ==========================================================================
+    pdfborder={0 0 0},
+    unicode, % use UTF-8 for PDF properties
+    plainpages=false,
+    pdfpagelabels,
+    hyperindex,
+    hyperfigures=true,
+    bookmarksnumbered=true, % generate section numbering in PDF bookmarks
+    bookmarks,
+    breaklinks=true, % allow URLs on multiple lines
+    hypertexnames=true 
+]{hyperref}
 
-\usepackage{hyperref} % hypertextove odkazy
+% must go after hyperref definition
+\usepackage[all]{hypcap} % instead of captions, refs will scroll to images
+
+\usepackage{url} % allow clickable URLs
+\usepackage{graphicx}
+
+\usepackage{framed} % frames around paragraphs
+\usepackage{listings} % see http://en.wikibooks.org/wiki/LaTeX/Packages/Listings
+
+\definecolor{DarkGray}{rgb}{0.3,0.3,0.3}
+\definecolor{LightGray}{rgb}{0.6,0.6,0.6}
+\definecolor{Green}{rgb}{0,0.6,0}
+\definecolor{Purple}{rgb}{0.8,0,0.8}
+\definecolor{Blue}{rgb}{0,0,1}
+
 \hypersetup{colorlinks=true, linkcolor=black, urlcolor=black, citecolor=black}
 
 \usepackage{pslatex} % times + courier monospace
 \usepackage{indentfirst}
+
+\usepackage{multicol}
+\lstdefinelanguage{PseudoCode}{
+ keywords={X, var, while, foreach, in, do, done, if, then, else, endif, true, false, function, endfunc, return, null, X}
+ keywordstyle=\color{Green}\textbf,
+ ndkeywords={class, export, boolean, throw, implements, import, this},
+ ndkeywordstyle=\bfseries,
+ identifierstyle=\color{black},
+ sensitive=false,
+ comment=[l]{//},
+ morecomment=[s]{/*}{*/},
+ commentstyle=\color{Green}\textit,
+ stringstyle=\color{DarkGray}\textit,
+ morestring=[b]',
+ morestring=[b]"
+}
+
+\lstset{
+ language=PseudoCode,
+ basicstyle=\tiny\sffamily,
+ columns=fullflexible,
+ numberstyle=\tiny,
+ %extendedchars=true,
+ breaklines=true,
+ %frame=bt,
+ %framerule=2pt,
+ numbers=left,
+ %xrightmargin=3pt,
+% framextopmargin=40pt,
+% framexbottommargin=4pt,
+ xleftmargin=8pt,
+ framexleftmargin=8pt,
+ morecomment=[l]{//},
+% belowskip=15pt,
+% aboveskip=10pt,
+ mathescape=true,
+ %linewidth=\textwidth,
+ showstringspaces=false
+}
 
 %\usepackage{setspace}
 %\onehalfspacing
@@ -29,7 +104,7 @@
 \widowpenalty=10000 % zabrani vdovam (prvni radek odstavce na predchozi strane)
 \clubpenalty=10000 % zabrani sirotkum (posledni radek odstavce na nove strane)
 
-\title{\textbf{Requirements Processing Tool}\\\vspace{26pt}\includegraphics[height=2cm]{logo.png}\\\vspace{16pt}\textbf{Software project documentation}}
+\title{\textbf{Requirements Processing Tool}\\\vspace{26pt}\includegraphics[height=2cm]{images/logo}\\\vspace{16pt}\textbf{Software project documentation}}
 
 \author{Viliam Šimko, Jiří Vinárek, Ondřej Fiala, Jan Krajíček, Rudo Tomori}
 
@@ -47,48 +122,14 @@
 \vspace{12pt}
 
 %\newpage
+  \include{chapter-introduction}
+%   \include{chapter-techologies}
+%   \include{chapter-techologies}
+%   \include{chapter-verification}
+%   \include{chapter-specification}
+%   ...
 
-\section{Introduction}
+\bibliographystyle{splncs03}
+\bibliography{bibfile}
 
-\subsection{Motivation}
-When developing a software application, analysts together with end-users negotiate the intended system behaviour.  An important part of the process is the elicitation of user requirements ranging from use-cases to non-functional properties.  A substantial part of the intended behaviour can be captured by writing textual use-cases.  It is then up to the developers to transform the sentences to code and implement all the business parts of the system properly.  Developers can identify business entities and actions invoked by these entities.  Moreover, when following the iterative development paradigm, it is necessary that the requirements elicitation phase be visited multiple times thus highlighting the importance of traceability links \cite{LARMAN}.
-
-Obviously, there is a significant gap between the original specification, written in natural language, and the final code.  When coded manually there is a high chance that the intended behaviour of a system does not correspond to the behaviour of a running application.  One of the possible approaches to minimizing such human errors is the model-driven development paradigm \cite{MDD} where automatic transformations between models are employed.  However, before any transformation can be used, formal models have to be constructed first.  In case of use-cases written in natural language, this can be achieved in a semi-automatic way with the support of existing natural language processing (NLP) tools.
-
-\subsection{Related work}
-Based on the simple and uniform sentence structure used in textual use cases \cite{COCKBURN}, a conversion scheme has been proposed in \cite{MENCL}\cite{DRAZAN} and later implemented in the Procasor Environment project \cite{PROCASORENV}.  The tool developed provides a GUI that guides users in writing use-case steps as sentences in plain English.  With the support of readily available NLP tools \cite{COLLINS}\cite{POSTAG}\cite{MORPH}, Procasor Environment supports a semi-automatic transformation into formal notation called Procases (Behaviour Protocols) \cite{BP}.  There has already been an attempt to take procases as an input for transformation to executable code \cite{CODEGEN}.
-
-\subsection{Goals}
-Similarly to the Procasor Environment project, the goal is to develop an interactive environment for specifying requirements.  The existing Procasor infrastructure has to be integrated into the Eclipse platform as a set of plugins, particularly the integration with \cite{EMF} has to be achieved.  Requirements will be specified as textual use cases employing the already developed transformation mechanism.  The editor will provide two alternative ways of use case specification:
-
-\begin{enumerate}
-\item The tool will interactively derive formal specification of the system's behavior from the textual use cases as the user enters them.
-\item The user will select paragraphs and sentences from an arbitrary text that will be progressively decomposed into elements of the meta-model with the help of the editor.
-\end{enumerate}
-This way, both "user-readable" textual specification and precise formal specifications of the system will be developed at the same time, only slightly increasing the effort required to write the use case models.  Instead of the Procase-notation, the EMF framework will be employed and a meta-model capturing the system's behaviour will be filled during transformation from natural language.  Once the requirements are formally captured by a meta-model, further transformation will be applied resulting into:
-
-\begin{itemize}
-\item Behavior Protocols \cite{BP}
-\item UML State Machines \cite{UML}
-\item Model of Components \cite{CMM} -- as an optional feature, elements from this model will be transformed to a simple executable prototype
-\end{itemize}
-It should be noted that the interface between the linguistic tools and the core application should be clearly defined and each NLP tool should be encapsulated as an Eclipse plugin.
-
-\begin{thebibliography}{99}
-\addcontentsline{toc}{section}{References}
-\bibitem{BP}Plasil, F., Visnovsky, S.: Behavior Protocols for Software Components, IEEE Transactions on Software Engineering, vol. 28, no. 11, Nov 2002
-\bibitem{UML}Object Management Group (OMG): Unified Modeling Language: Superstructure, version 2.3, \url{http://www.omg.org/spec/UML/2.3/Superstructure/PDF/}
-\bibitem{MDD}Stahl T., Voelter M., Czarnecki K.: Model-Driven Software Development: Technology, Engineering, Management. John Wiley \& Sons, 2006
-\bibitem{EMF} Eclipse Modeling Framework Project (EMF), \url{http://www.eclipse.org/modeling/emf/}
-\bibitem{COCKBURN} Cockburn, A.: Writing Effective Use Cases, Addison-Wesley Pub Co, ISBN: 0201702258, 1st edition, Jan 2000
-\bibitem{LARMAN} Larman C.: Applying UML and Patterns: An Introduction to Object-Oriented Analysis and Design and Iterative Development (3rd Edition). Prentice Hall PTR, Upper Saddle River, NJ, USA, 2004
-\bibitem{MENCL} Mencl V.: Deriving Behavior Specifications from Textual Use Cases, in Proceedings of Workshop on Intelligent Technologies for Software Engineering (WITSE04, Sep 21, 2004, part of ASE 2004), Linz, Austria, ISBN 3-85403-180-7, pp. 331-341, Oesterreichische Computer Gesellschaft, Sep 2004
-\bibitem{DRAZAN} Drazan J., Mencl V.: Improved Processing of Textual Use Cases: Deriving Behavior Specifications, in Proceedings of SOFSEM 2007, January 20 - 26, 2007, Harrachov, Czech Republic, LNCS 4362, pp.856-868, DOI: 10.1007/978-3-540-69507-3\_74, Springer, Jan 2007
-\bibitem{CODEGEN} Francu J., Hnetynka P.: Automated Code Generation from System Requirements in Natural Language, e-Informatica Software Engineering Journal, Volume 3, Issue 1, 2009
-\bibitem{CMM} Šimko V., Hnětynka P., Bureš T.: From textual use-cases to component-based applications, In proceedings of SNPD 2010, London, UK, Studies in Computational Intelligence (SCI), Springer, Jun 2010
-\bibitem{PROCASORENV} Procasor Environment: Interactive Environment for Requirement Specification, \url{http://d3s.mff.cuni.cz/~mencl/procasor-env/}
-\bibitem{COLLINS} Michael Collins: A New Statistical Parser Based on Bigram Lexical Dependencies, Proceedings of 34th Annual Meeting of the Association for Computational Linguistics, ACL 1996, 24-27 June 1996, University of California, Santa Cruz, California, USA, Morgan Kaufmann Publishers, 1996,  \url{http://www.cis.upenn.edu/~mcollins/}
-\bibitem{POSTAG} Adwait Ratnaparkhi: A Maximum Entropy Part-Of-Speech Tagger, Proceedings of the Empirical Methods in Natural Language Processing Conference, May 17-18, 1996. University of Pennsylvania, 1996, \url{http://www.cis.upenn.edu/~adwait/statnlp.html}
-\bibitem{MORPH} Minnen, G., Carroll J., Pearce, D.: Applied morphological processing of English, Natural Language Engineering, 7(3), pp. 207-223, 2001, \url{http://www.informatics.susx.ac.uk/research/nlp/carroll/abs/01mcp.html}
-\end{thebibliography}
 \end{document}
