added two chapters + sample text

--- a/documentation/latex/reprotool.tex
+++ b/documentation/latex/reprotool.tex
@@ -106,7 +106,7 @@
 
 \title{\textbf{Requirements Processing Tool}\\\vspace{26pt}\includegraphics[height=2cm]{images/logo}\\\vspace{16pt}\textbf{Software project documentation}}
 
-\author{Viliam Šimko, Jiří Vinárek, Ondřej Fiala, Jan Krajíček, Rudo Tomori}
+\author{Viliam Šimko, Jiří Vinárek, Ondřej Fiala, Rudo Tomori}
 
 \date{} % bez datumu
 
@@ -123,9 +123,10 @@
 
 %\newpage
   \include{chapter-introduction}
+  \include{chapter-verification}
+  \include{chapter-linguistic}
 %   \include{chapter-techologies}
 %   \include{chapter-techologies}
-%   \include{chapter-verification}
 %   \include{chapter-specification}
 %   ...
 
