--- a/documentation/latex/chapter-linguistic.tex
+++ b/documentation/latex/chapter-linguistic.tex
@@ -1,10 +1,34 @@
 \section{Linguistic tools}
 
+One of the main parts of ReProTool project is an automatic text analyse. This part allows user to skip long-lasting manual annotation by pushing a button. This chapter describes implementation of linguistics analyse in ReProTool project and its linguistics background.
+
 \subsection{Introduction}
+Process of linguistics analyse gets natural language sentences as an input and returns analyzed usecases as is shown at figure \ref{fig:LinguisticsAnalyseSmall}. Whole process is divided into two parts: process of parsing and core analyse. Parsing contains main linguistics operations whitch are tokenization, tagging, parsing and lemmatization. Core work of parsing process is done by popular external linguistic analyse tools described in section \ref{sec:externaltools}. Core analyse converts parsed sentence trees with annotations into a usecases model ??. This process is described in more detail in section \ref{sec:analysis}. % TODO \ref{sec:usecasemodel}
+
+Each implementation of any analyse brings problem of measuring success. We have put together a dataset of nearly tree hundred of sentences. These sentences contain the most commom use cases operations. All these sentences were manually anotated and analysed. In section \ref{sec:benchmark} is described our benchmark solution with actual results.
+
+\begin{figure}[h]
+  \centering
+  \includegraphics[height=30pt]{images/LinguisticsAnalyseSmall}
+  \caption{Process of sentence analysis}
+  \label{fig:LinguisticsAnalyseSmall}
+\end{figure}
 
 \subsection{Linguistics background}
 
+Main goal of linguistic analyse in our porject is to identify important words in a sentence. These words are mainly constituents.
+
+\begin{itemize}
+\item {\bf Subject} main subject of the sentence
+\item {\bf Main verb} verb wearing meaning
+\item {\bf Representative object} main subject of sentence action
+\item {\bf Indirect object} an actor usually owning representative object
+\end{itemize}
+
+\subsubsection{Deriving rules}
+
 \subsection{External tools}
+\label{sec:externaltools}
 
 \begin{itemize}
 \item MXPOST tagger \href{http://www.inf.ed.ac.uk/resources/nlp/local_doc/MXPOST.html}{Java implementation of MXPOST tagger}
@@ -13,6 +37,7 @@
 \end{itemize}
 
 \subsection{Analysis}
+\label{sec:analysis}
 
 \begin{figure}[h]
   \centering
@@ -21,7 +46,25 @@
   \label{fig:LinguisticsAnalyse}
 \end{figure}
 
+\subsubsection{Parsing}
+
+\begin{figure}[h]
+  \centering
+  \includegraphics[height=300pt]{images/ParsedTree}
+  \caption{Parsed tree of sentence "Administrator sends messages".}
+  \label{fig:ParsedTree}
+\end{figure}
+
+\begin{figure}[h]
+  \centering
+  \includegraphics[width=400pt]{images/InternalActionExample}
+  \caption{Example of internal action analyse result.}
+  \label{fig:InternalActionExample}
+\end{figure}
+
+
 \subsection{Benchmark}
+\label{sec:benchmark}
 
 Main usecase benchmark dataset:
 
