--- a/documentation/latex/reprotool.tex
+++ b/documentation/latex/reprotool.tex
@@ -104,12 +104,21 @@
 \widowpenalty=10000 % zabrani vdovam (prvni radek odstavce na predchozi strane)
 \clubpenalty=10000 % zabrani sirotkum (posledni radek odstavce na nove strane)
 
-\title{\textbf{Requirements Processing Tool}\\\vspace{26pt}\includegraphics[height=2cm]{images/logo}\\\vspace{16pt}\textbf{Software project documentation}}
+\title{
+  \textbf{Requirements Processing Tool}\\
+  \vspace{26pt}\includegraphics[height=5cm]{images/reprotool-logo}\\
+  \vspace{16pt}\textbf{Software project documentation}
+}
 
-\author{Viliam Šimko, Jiří Vinárek, Ondřej Fiala, Rudo Tomori}
+\author{
+  Jiří Vinárek,
+  Ondřej Fiala,
+  Rudo Tomori
+  \\\\\\\\\\
+  Supervisor: Viliam Šimko
+}
 
-\date{} % bez datumu
-
+\date{\small{\today}}
 
 \begin{document}
 \maketitle
