added exported diagrams from reprotool.model

--- a/documentation/latex/chapter-verification.tex
+++ b/documentation/latex/chapter-verification.tex
@@ -63,12 +63,28 @@ The XText generates an EMF model from the specified grammar. You can have a hier
 \emph{NuSMVLang.ecore} file in the \emph{reprotool.fm.nusmv.lang} plugin. To better visualise the model, right-click on the \emph{NuSMVLang.ecore} file in
 the package explorer of the eclipse IDE and click the option ``Initialize Ecore Diagram file...''. This will create the \emph{NuSMVLang.ecorediag} file that you can view with the provided eclipse editor.
 
-\begin{figure}[ht]
+\begin{figure}
   \centering
-  \includegraphics[width=0.8\textwidth]{images/NuSmvLang}
-  \caption{An excerpt from the NuSMV model diagram}
-  \label{fig:NuSmvLang}
+  \includegraphics[width=280pt]{images/ReprotoolUCAnnotModel}
+  \caption{Model of annotations}
+  \label{fig:ModelOfAnnotations}
 \end{figure}
+
+\begin{figure}
+  \centering
+  \includegraphics[width=260pt]{images/ReprotoolActionsModel}
+  \caption{Model of derived action}
+  \label{fig:ReprotoolActionsModel}
+\end{figure}
+
+\begin{figure}
+  \centering
+  \includegraphics[width=260pt]{images/ReprotoolUCModel}
+  \caption{Use-case model}
+  \label{fig:ReprotoolUCModel}
+\end{figure}
+
+
 
 \subsection{Model to model transformation}
 
