--- a/documentation/latex/reprotool.tex
+++ b/documentation/latex/reprotool.tex
@@ -7,9 +7,14 @@
 %\usepackage{natbib}
 \usepackage[
     % ==========================================================================
-    pdfauthor={TODO},
+    pdfauthor={
+      Jiri Vinarek,
+      Ondrej Fiala,
+      Rudo Tomori,
+      Viliam Simko (Supervisor)
+    },
     pdftitle={Requirements Processing Tool},
-    pdfsubject={Documentation},
+    pdfsubject={Software project documentation},
     pdfkeywords={Use-cases, Formal methods, Model Checking},
     pdfproducer={Latex with hyperref},
     pdfcreator={pdflatex},
