--- a/documentation/latex/chapter-verification.tex
+++ b/documentation/latex/chapter-verification.tex
@@ -1,10 +1,47 @@
 \section{Verification of consistency}
-This section describes how we verify the consistency of the system. The system's behaviour is specified by the use cases contained
-in the project. The use cases and the relations between them are stored in a memory strucure we refer to as use case model.
+This section describes how we verify the consistency of the system. The system's behaviour is specified by the use-cases contained
+in the project. The use-cases and the relations between them are stored in a memory strucure we refer to as use-case model.
 This model is based on the EMF framework so that it integrates well within the eclipse environment.
 
+\begin{figure}[h]
+  \centering
+  \includegraphics[width=260pt]{images/ReprotoolUCModel}
+  \caption{Use-case model}
+  \label{fig:ReprotoolUCModel}
+\end{figure}
+
+\subsection{Annotations model}
+
+When we refer to verifying the consistency of the system, we actually verify the consistency of annotations in the project. Every
+reprotool project can contain a set of constraints imposed upon annotations in the project. Annotations are added to the individual
+use-case steps of the use-cases in the project. An intuitive example of annotations are \emph{open}/\emph{close}
+annotations. For such annotations we could describe constraints like \emph{After open there should always be close}, or \emph
+{No multi open without close}.
+
+Every use-case step can contain an annotation that is specified by its \emph{type} and \emph{id}. Every annotation has a description
+that is derived by concatenating the name of the \emph{annotation type} and \emph{annotation id} by an underscore delimiter.
+An example of an annotation type we use in \emph{reprotool} is \emph{open}. A suitable \emph{id} for annotation of this type could be
+\emph{file1}. So the description of this annotation reads \emph{open\_file1}.
+
+There are two groups of annotation types. They are either temporal or special. We will cover special annotations later. For now, it
+suffices to say they are for special purposes. Every reprotool project specifies what annotation types it might contain. Those
+annotation types are organized in sets called \emph{AnnotationGroup}. Again, annotation group can be either \emph
+{SpecialAnnotationGroup} or \emph{TemporalAnnotationGroup} depending on the type of the group members. Annotation group contains
+logically grouped annotations. A simple annotation group could contain annotation types \emph{open} and \emph{close}.
+An annotation group can contain zero or more \emph{TemporalLogicFormula}s. A formula has a String description and an actual formula
+string in a special format that the NuSMV tool understands. We will describe later the format of these formulas.
+
+\begin{figure}[ht]
+  \centering
+  \includegraphics[width=280pt]{images/ReprotoolUCAnnotModel}
+  \caption{Model of annotations}
+  \label{fig:ModelOfAnnotations}
+\end{figure}
+
+\subsection{NuSMV symbolic model checker}
+
 We use NuSMV symbolic model-checker to verify consistency of use-cases with regard to their temporal annotations.
-Although NuSMV support BDD-based\footnote{Using binary decision diagrams} and BMC-based\footnote{Bounded model-checking using a SAT solver} model-checking techniques, in our project we use just the BDD-based approach.
+Although NuSMV supports both BDD-based\footnote{Using binary decision diagrams} and BMC-based\footnote{Bounded model-checking using a SAT solver} model-checking techniques, in our project we use just the BDD-based approach.
 NuSMV supports analysis of synchronous and asynchronous systems using Computation Tree Logic (CTL) and Linear Temporal Logic (LTL).
 Our framework supports both CTL and LTL, however CTL is preferred because NuSMV would convert LTL formulae into CTL internally.
 
@@ -30,7 +67,7 @@ The NuSMV language model is based on the EMF framework and is generated from the
 This model describes the classes that build up the AST (Abstract Syntax Tree) of the NuSMV language.
 
 Here we present an excerpt from the NuSMV language grammar. You can find the whole grammar in th
-reprotool.fm.nusmv.lang plugin in the NuSMVLang.xtext file.
+\emph{reprotool.fm.nusmv.lang} plugin in the \emph{NuSMVLang.xtext} file.
 
 \begin{lstlisting}
  Module:
@@ -65,26 +102,10 @@ the package explorer of the eclipse IDE and click the option ``Initialize Ecore 
 
 \begin{figure}
   \centering
-  \includegraphics[width=280pt]{images/ReprotoolUCAnnotModel}
-  \caption{Model of annotations}
-  \label{fig:ModelOfAnnotations}
-\end{figure}
-
-\begin{figure}
-  \centering
   \includegraphics[width=260pt]{images/ReprotoolActionsModel}
   \caption{Model of derived action}
   \label{fig:ReprotoolActionsModel}
 \end{figure}
-
-\begin{figure}
-  \centering
-  \includegraphics[width=260pt]{images/ReprotoolUCModel}
-  \caption{Use-case model}
-  \label{fig:ReprotoolUCModel}
-\end{figure}
-
-
 
 \subsection{Model to model transformation}
 
@@ -94,13 +115,263 @@ take a reprotool project as input and transform it into the generated NuSMV mode
 This transformation is implemented in the \emph{reprotool.fm.nusmv} plugin in the \emph{reprotool.fm.nusmv.mapping} package.
 The transformation itself is quite straight-forward and is defined in an XTend class \emph{NuSMVProj.xtend}.
 For every use-case we create a definition of a non-deterministic state machine.
-The state machine's steps are directly related to the steps of the related use case.
-The use cases in the reprotool project can have precedence relations specified. Theses relations are considered in the
-transformation process. The use case state machines are instantiated with a parameter that triggers the execution of the machine.
+The state machine's states are directly related to the steps of the related use-case.
+The use-cases in the reprotool project can have precedence relations specified. Theses relations are considered in the
+transformation process. The use-case state machines are instantiated with a parameter that triggers the execution of the machine.
 With this parameter we ensure that the precedence relations are fulfilled. By means of this parameter we also avoid parallel execution
 of multiple use-cases.
 
-One part of this model transformation process is to generate NuSVM CTL formulas which are to be checked by the NuSMV tool. The
+One part of this model transformation process is to generate NuSMV CTL/LTL formulas which are to be checked by the NuSMV tool. The
 skeletons of these formulas are provided by the user in the reprotool project. In this model to model transformation process these
-formula skeletons are simply expanded by substituting the annotation patterns with annotations found in the steps of the use cases
+formula skeletons are simply expanded by substituting the annotation patterns with annotations found in the steps of the use-cases
 in the reprotool project. A detailed example with explanation is provided in the next section.
+
+\subsection{Example of a reprotool project converted into NuSMV}
+
+In this section we present a simple reprotool project consisting of two use-cases. We show by the means of an example how this project
+gets transformed into the NuSMV language format.
+
+The project contains two use-cases. For every use-case U one state machine M is generated. This machine is represented by the states and
+transitions between them that are derived directly from the use-case steps of the use-case U. Let's assume our project contains a use
+case U1. The use-case U1 has a main scenario that contains five use-case steps. Use-case step 1 is annotated by the annotation \emph{open\_file}
+and use-case step 2 is annotated by the annotation \emph{close\_file}. Step 2 has two extension scenarios (One is three steps and the other
+one two steps long) and step 4 has one extension scenario two steps long. Step 4 includes another use-case U2 from the project. The
+main scenario of use-case U2 contains only single step. You can have a look at the visual representation of the use-case U1 (and also
+use-case U2 since it is included in the step 4 of the main scenario of the use-case U1) in the following figure. The initial state is
+filled with black colour and the final state is filled with green colour. Steps 1 and 2 are marked with a violet square because these
+steps are annotated.
+
+\begin{figure}[h]
+  \centering
+  \includegraphics{images/uc1}
+  \caption{Visual representation of the use-case U1}
+  \label{fig:use-case U1}
+\end{figure}
+
+Now we present the state machine M that represents the use-case U1 and is written down using the NuSMV syntax. The state machine is
+represented by a single module UC\_U1. This module contains a definition of variable s to which values representing variour machine
+states can be assigned. Indeed, the transition to state s1 in the state machine is simulated by assigning the value s1 to the
+variable s. The biggest part of the module UC\_U1 specification takes up a case construct that specifies various state transitions
+of the machine based on the current state. Becuase use-case U1 includes another use-case U2 (which is represented by the module
+UC\_U2), the module UC\_U1 also contains a variable y1 that is an instantiation of the module UC\_U2 included in the module UC\_U1.
+\begin{lstlisting}
+ MODULE UC_U1 ( top , run )
+	VAR y1run : boolean ;
+	INIT y1run in FALSE
+	VAR y1 : UC_U2 ( top , y1run ) ;
+	ASSIGN next ( y1run ) := (s=s3__) ;
+	VAR s : { s0 , s_ext_3 , s_ext_2 , s2 , s1 , s3__ , s2a2 , s3_ , s2_ , s2b1 ,
+			s3a1 , s1_ , s2a1 , s3 , sFin } ;
+	INIT s in s0
+	ASSIGN next ( s ) := case
+		s=s0 & !run : s0;
+		s=s0 & run : {s1_};
+		s=s3__ & y1.s != sFin : s3__;
+		s=s3__ & y1.s  = sFin : s3_;
+		s=s_ext_2 : {s3__};
+		s=s2 : {s2a1,s2b1,s_ext_2};
+		s=s1 : {s2_};
+		s=s2a2 : {s_ext_2};
+		s=s3_ : s3;
+		s=s2_ : s2;
+		s=s2b1 : {s_ext_2};
+		s=s3a1 : {s_ext_3};
+		s=s1_ : s1;
+		s=s2a1 : {s2a2};
+		s=s3 : {s3a1,s_ext_3};
+		s=s_ext_3 : sFin;
+		s=sFin : sFin;
+	esac ;
+\end{lstlisting}
+
+Here we present the machine M2 that represents the included use-case U2.
+\begin{lstlisting}
+ MODULE UC_U2 ( top , run )
+	VAR s : { s0 , s1 , sFin } ;
+	INIT s in s0
+	ASSIGN next ( s ) := case
+		s=s0 & !run : s0;
+		s=s0 & run : {s1};
+		s=s1 : sFin;
+		s=sFin : sFin;
+	esac ;
+\end{lstlisting}
+
+As we have already mentioned when describing use-case U1, the first two steps of its main scenario are annotated. (This is denoted
+by a small violet square in the graphical representation of the use-case U1). Every such an annotation generates an annotation variable
+definition in the NuSMV model. The variable name encodes the annotation type (for example open) and the annotation id (for example
+file1). The variable is of boolean type and is initialized with the logical value of zero. The variable value is set to logical one
+if and only if the state variable s of the respective state machine module denotes that the machine is in the annotated state.
+
+Let's clarify this a bit more with the example of our project. There we have use-case step one of the use-case U1 annotated with the
+open annotation (annotation id is file1) and step two annotated with the close annotation (annotation id is file1). These two use-case
+step annotations in the use-case U1 of our project yield the following annotation variable definitions:
+
+\begin{lstlisting}
+ 	VAR open_file1 : boolean ;
+	INIT open_file1 in FALSE
+	ASSIGN next ( open_file1 ) := FALSE
+		| xU1.s in {s1_}
+	;
+	VAR close_file1 : boolean ;
+	INIT close_file1 in FALSE
+	ASSIGN next ( close_file1 ) := FALSE
+		| xU1.s in {s2_}
+	;
+\end{lstlisting}
+
+Now we will describe the variable named \emph{p} which has the function of a steering wheel of whole simulation performed by the \emph{NuSMV} tool
+when looking for possible violations of our system. This variable is of type enum and can assume the value \emph{none}, or other n values that
+map directly to the n use-cases present in our project. The \emph{p} variable is initialised with the \emph{none} value. When the \emph{NuSMV} tool performs
+steps in our system which are basicly transitions in the state machines of our use-cases, the value of the \emph{p} variable alternates between
+the \emph{none} value and any other value from the set of possible values. Thus, the \emph{p} variable definition looks like this:
+\begin{lstlisting}
+ 	VAR p : { none , pU1 , pU2} ;
+	INIT p in none
+	ASSIGN next ( p ) := case
+		p=none : {pU1, pU2};
+		TRUE : none;
+	esac ;
+\end{lstlisting}
+
+The \emph{p} variable helps us to decide which state machine could be executed in the next steps. We also generate definition for the
+boolean variable \emph{idle} that tells us if any of the use-case state machines is currently being executed. The \emph{idle} variable is defined
+by the means of a set of boolean variables from which every variable tells us if the machine to which it maps is currently
+being executed. This is how it looks in the \emph{NuSMV} syntax:
+\begin{lstlisting}
+ 	VAR idle : boolean ;
+	INIT idle in TRUE
+	ASSIGN next ( idle ) := case
+		xU1run | xU2run : FALSE;
+		TRUE : TRUE;
+	esac ;
+\end{lstlisting}
+
+Next we need to define for every use-case \emph{UN} a boolean variable \emph{xUNrun} that triggers the execution of the respective state machine
+and at the same time serves as an indicator if the respective state machine N is currently running. This boolean variable is
+initialised with logical zero. It is assigned the logical one only if all other machines are idle and the p variable points to the
+machine N. For every use-case UN we also need to define a variable \emph{xUN} that is the actual instantiation of the state machine N.
+Of course this variable is of type \emph{UC\_UN}. This is how the definitions of the variables \emph{xUN} and \emph{xUNrun} look in practice:
+\begin{lstlisting}
+ 	VAR xU1 : UC_U1 ( self , xU1run ) ;
+	VAR xU1run : boolean ;
+	INIT xU1run in FALSE
+	ASSIGN next ( xU1run ) := case
+		p=pU1 & idle & xU1.s = s0 : TRUE;
+		TRUE : xU1run & xU1.s != sFin;
+	esac ;
+\end{lstlisting}
+
+Now we are going to describe how the \emph{CTL} and \emph{LTL} specifications are generated. When a new empty reprotool project is generated in the
+\emph{eclipse IDE}, it already contains a set of predefined \emph{CTL} formulas along with a quick description of each formula. Here is a subset of
+these predefined formulas that is relevant to the \emph{open}/\emph{close} annotations:
+
+\begin{description}
+ \item [$AG(open \rightarrow AF(close))$] After 'open' there should always be 'close'
+ \item [$AG(open \rightarrow AX(A\lbrack!open \cup close\rbrack))$] No multi-open without close
+ \item [$AG(close \rightarrow AX(A\lbrack!close \cup open \mid !AF(close) \rbrack))$] No multi-close without open
+ \item [$A\lbrack !close \cup open \mid !AF(close)\rbrack$] First 'open' then 'close'
+\end{description}
+
+We can see that these logical formulas specify properties for the open and close annotations. We also know that in the use-case \emph{U1} we
+use annotation \emph{open\_file1} and \emph{close\_file1}. Now we simply expand the predefined \emph{CTL} and \emph{LTL} formulas. This is what we get in our
+example:
+\begin{lstlisting}
+ 	CTLSPEC AG(open_file1 -> AF(close_file1))
+	CTLSPEC AG(open_file1 -> AX(A[!open_file1 U close_file1]))
+	CTLSPEC AG(close_file1 -> AX(A[!close_file1 U open_file1 | !AF(close_file1) ]))
+	CTLSPEC A[!close_file1 U open_file1 | !AF(close_file1)]
+\end{lstlisting}
+
+And this is what the \emph{NuSMV} file looks like:
+\begin{lstlisting}
+ MODULE main
+ 	CTLSPEC AG(open_file1 -> AF(close_file1))
+	CTLSPEC AG(open_file1 -> AX(A[!open_file1 U close_file1]))
+	CTLSPEC AG(close_file1 -> AX(A[!close_file1 U open_file1 | !AF(close_file1) ]))
+	CTLSPEC A[!close_file1 U open_file1 | !AF(close_file1)]
+
+	FAIRNESS p=pU1
+	FAIRNESS p=pU2
+	FAIRNESS p=pU3
+
+	VAR p : { none , pU1 , pU2} ;
+	INIT p in none
+	ASSIGN next ( p ) := case
+		p=none : {pU1, pU2};
+		TRUE : none;
+	esac ;
+
+ 	VAR idle : boolean ;
+	INIT idle in TRUE
+	ASSIGN next ( idle ) := case
+		xU1run | xU2run : FALSE;
+		TRUE : TRUE;
+	esac ;
+
+ 	VAR xU1 : UC_U1 ( self , xU1run ) ;
+	VAR xU1run : boolean ;
+	INIT xU1run in FALSE
+	ASSIGN next ( xU1run ) := case
+		p=pU1 & idle & xU1.s = s0 : TRUE;
+		TRUE : xU1run & xU1.s != sFin;
+	esac ;
+
+	VAR xU2 : UC_U2 ( self , xU2run ) ;
+	VAR xU2run : boolean ;
+	INIT xU2run in FALSE
+	ASSIGN next ( xU2run ) := case
+		p=pU2 & idle & xU2.s = s0 : TRUE;
+		TRUE : xU2run & xU2.s != sFin;
+	esac ;
+
+ 	VAR open_file1 : boolean ;
+	INIT open_file1 in FALSE
+	ASSIGN next ( open_file1 ) := FALSE
+		| xU1.s in {s1_}
+	;
+
+	VAR close_file1 : boolean ;
+	INIT close_file1 in FALSE
+	ASSIGN next ( close_file1 ) := FALSE
+		| xU1.s in {s2_}
+	;
+
+ MODULE UC_U1 ( top , run )
+	VAR y1run : boolean ;
+	INIT y1run in FALSE
+	VAR y1 : UC_U2 ( top , y1run ) ;
+	ASSIGN next ( y1run ) := (s=s3__) ;
+	VAR s : { s0 , s_ext_3 , s_ext_2 , s2 , s1 , s3__ , s2a2 , s3_ , s2_ , s2b1 ,
+			s3a1 , s1_ , s2a1 , s3 , sFin } ;
+	INIT s in s0
+	ASSIGN next ( s ) := case
+		s=s0 & !run : s0;
+		s=s0 & run : {s1_};
+		s=s3__ & y1.s != sFin : s3__;
+		s=s3__ & y1.s  = sFin : s3_;
+		s=s_ext_2 : {s3__};
+		s=s2 : {s2a1,s2b1,s_ext_2};
+		s=s1 : {s2_};
+		s=s2a2 : {s_ext_2};
+		s=s3_ : s3;
+		s=s2_ : s2;
+		s=s2b1 : {s_ext_2};
+		s=s3a1 : {s_ext_3};
+		s=s1_ : s1;
+		s=s2a1 : {s2a2};
+		s=s3 : {s3a1,s_ext_3};
+		s=s_ext_3 : sFin;
+		s=sFin : sFin;
+	esac ;
+
+MODULE UC_U2 ( top , run )
+	VAR s : { s0 , s1 , sFin } ;
+	INIT s in s0
+	ASSIGN next ( s ) := case
+		s=s0 & !run : s0;
+		s=s0 & run : {s1};
+		s=s1 : sFin;
+		s=sFin : sFin;
+	esac ;
+\end{lstlisting}
