--- a/documentation/latex/reprotool.tex
+++ b/documentation/latex/reprotool.tex
@@ -69,9 +69,9 @@
 
 \lstset{
  language=PseudoCode,
- basicstyle=\tiny\sffamily,
+ basicstyle=\sffamily,
  columns=fullflexible,
- numberstyle=\tiny,
+ numberstyle=\normalsize,
  %extendedchars=true,
  breaklines=true,
  %frame=bt,
