--- a/documentation/latex/reprotool.tex
+++ b/documentation/latex/reprotool.tex
@@ -49,7 +49,7 @@
 \hypersetup{colorlinks=true, linkcolor=black, urlcolor=black, citecolor=black}
 
 \usepackage{pslatex} % times + courier monospace
-\usepackage{indentfirst}
+%\usepackage{indentfirst}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % NuSMV Input Language
@@ -163,6 +163,6 @@
 %   ...
 
 \bibliographystyle{splncs03}
-\bibliography{bibfile}
+\bibliography{bibfile,bibfile-nusmv,bibfile-eclipse}
 
 \end{document}
