added "installation" and "architecture" sections

--- a/documentation/latex/reprotool.tex
+++ b/documentation/latex/reprotool.tex
@@ -155,8 +155,11 @@
 
 %\newpage
   \include{chapter-introduction}
+  \include{chapter-architecture}
   \include{chapter-verification}
   \include{chapter-linguistic}
+  \include{chapter-installation}
+  
 %   \include{chapter-techologies}
 %   \include{chapter-techologies}
 %   \include{chapter-specification}
